  Changes:
    - Added dedicated buttons to move subfactories and recipes up and down, making the interaction more discoverable and easier to use
    - Combined the various machine dialogs (chooser, limits, modules, fuel) into one
    - Unified the interactions on machine and beacon modules
    - Reordered the subfactory list action buttons to make more sense by grouping the archive-related ones
    - Removed the dedicated 'toggle recipe'-button and integrated its core functionality into the recipe button itself
    - Re-architected the way button clicks are handled, making tutorial tooltips both more accurate and prettier
    - Removed mod interactions with FNEI and WIIRUF, meaning alt-clicking items or recipes will now only open them in Recipe Book, if possible
    - Added a ko-fi patronage 'link' to the preferences pane
    - Updated to flib 0.9.1
  Bugfixes:
    - Fixed that the first recipe on subfloors could be moved down in certain circumstances
    - Fixed that shift-click adding a subfactory and cancelling the picker dialog would create an empty subfactory
    - Fixed that deleting a subfactory through the 'edit subfactory'-dialog would not put it into the archive

---------------------------------------------------------------------------------------------------
Version: 0.00.00
Date: 00. 00. 0000
  Features:
    -
  Changes:
    - 
  Bugfixes:
    - 

---------------------------------------------------------------------------------------------------
Version: 1.1.37
Date: 23. 03. 2022
  Bugfixes:
    - Actually actually fixed the stupid scaling issue, maybe

---------------------------------------------------------------------------------------------------
Version: 1.1.36
Date: 21. 03. 2022
  Bugfixes:
    - Actually fixed the image scaling issue with the matrix solver, as the previous fix resulted in a crash instead

---------------------------------------------------------------------------------------------------
Version: 1.1.35
Date: 21. 03. 2022