@@ -109,48 +109,15 @@ local function attempt_adding_line(player, recipe_id)
             Floor.insert_at(ui_state.context.floor, (add_after_position + 1), line)
         end
 
-        local preferences = data_util.get("preferences", player)
-        local mb_defaults = preferences.mb_defaults
         local message = nil
-
         if not (recipe.proto.custom or player.force.recipes[recipe.proto.name].enabled) then
             message = {text={"fp.warning_recipe_disabled"}, type="warning"}
         end
-
-        -- Add default machine modules, if desired by the user
-        local machine_module = mb_defaults.machine
-        local secondary_module = mb_defaults.machine_secondary
-
-        if machine_module and Machine.check_module_compatibility(line.machine, machine_module) then
-            ModuleSet.add(line.machine.module_set, machine_module, line.machine.proto.module_limit)
-
-        elseif secondary_module and Machine.check_module_compatibility(line.machine, secondary_module) then
-            ModuleSet.add(line.machine.module_set, secondary_module, line.machine.proto.module_limit)
-
-        -- Only show an error if any module default is actually set
-        elseif machine_module and message == nil then  -- don't overwrite previous message, if it exists
-            message = {text={"fp.warning_module_not_compatible", {"fp.pl_module", 1}}, type="warning"}
-        end
-
-        -- Add default beacon modules, if desired by the user
-        local beacon_module_proto, beacon_count = mb_defaults.beacon, mb_defaults.beacon_count
-        local beacon_proto = prototyper.defaults.get(player, "beacons")  -- this will always exist
-
-        if beacon_module_proto ~= nil and beacon_count ~= nil then
-            local blank_beacon = Beacon.init(beacon_proto, beacon_count, nil, line)
-
-            if Beacon.check_module_compatibility(blank_beacon, beacon_module_proto) then
-                ModuleSet.add(blank_beacon.module_set, beacon_module_proto, beacon_proto.module_limit)
-                Line.set_beacon(line, blank_beacon)
-
-            elseif message == nil then  -- don't overwrite previous message, if it exists
-                message = {text={"fp.warning_module_not_compatible", {"fp.pl_beacon", 1}}, type="warning"}
-            end
-        end
+        local defaults_message = Line.apply_mb_defaults(line, player)
+        if not message then message = defaults_message end  -- a bit silly
 
         calculation.update(player, ui_state.context.subfactory)
         main_dialog.refresh(player, "subfactory")
-
         if message ~= nil then title_bar.enqueue_message(player, message.text, message.type, 1, false) end
     end
 end
