@@ -9,6 +9,7 @@ Date: 00. 00. 0000
     - Combined the various machine dialogs (chooser, limits, modules, fuel) into one
     - Unified the interactions on machine and beacon modules
     - Reordered the subfactory list action buttons to make more sense by grouping the archive-related ones
+    - Made the 'reset machine' action also set modules and beacons to their configured defaults if possible
     - Removed the dedicated 'toggle recipe'-button and integrated its core functionality into the recipe button itself
     - Re-architected the way button clicks are handled, making tutorial tooltips both more accurate and prettier
     - Removed mod interactions with FNEI and WIIRUF, meaning alt-clicking items or recipes will now only open them in Recipe Book, if possible
@@ -25,9 +26,9 @@ Date: 00. 00. 0000
   Features:
     -
   Changes:
-    - 
+    -
   Bugfixes:
-    - 
+    -
 
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.37
